@@ -27,7 +27,11 @@ Set the configuration file to one other than the default of
 .TP
 .I \-n
 Stops  the  daemon  from  forking  and  detaching  from the controlling
-terminal. This is most useful for debugging purposes.
+terminal. This is useful for running from init.
+.TP
+.I \-d
+Like -n, but also sends the system logs to standard output. This is
+most useful for debugging purposes.
 .TP
 .I \-v
 Prints the version of the program and exits.
